<resources>
    <string name="app_name">Shopping List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="other">Other</string>
    <string name="archived">Archived</string>
    <string name="current">Current</string>
    <string name="title_hint">Shopping list title</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="listCreatedAtTime">listCreatedAtTime</string>
    <string name="choose_unit">Choose unit:</string>
    <string name="quantity">Quantity</string>
    <string name="product_name">Product name</string>
    <string name="enter_list_title">Enter list title</string>
    <string name="ok">ok</string>
    <string name="list_type">listType</string>

    <string-array name="unit_array">
        <item>kg</item>
        <item>gram</item>
        <item>liter</item>
        <item>pc/s</item>
        <item>other</item>
    </string-array>
</resources>
