<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="40dp"
    android:padding="0dp"
    android:windowNoTitle="true"
    android:windowBackground="@null"
    android:windowIsFloating="false"
    android:theme="@style/Modal">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonClose"
        android:layout_gravity="end"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/close"
        android:background="@null"/>

    <TextView
        android:id="@+id/licence_message"
        android:text="@string/enter_list_title"
        android:layout_width="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="10dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/productWrapper">

        <EditText
            android:id="@+id/editTextProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:imeActionId="@+id/addProduct"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:layout_margin="10dp"
            android:textColor="@color/colorGreyDark"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/quantityWrapper">

            <EditText
                android:id="@+id/editTextQuantity"
                android:maxLength="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:imeActionId="@+id/addQuantity"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_margin="10dp"
                android:textColor="@color/colorGreyDark"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/choose_unit"
            android:id="@+id/textView" />

        <Spinner
            android:id="@+id/unitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/textView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@id/textView"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"
        android:textColor="@color/colorPrimary"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/ok"
        android:id="@+id/activateButton" />

</LinearLayout>
